src/css/main.scss
/* ... */
.p-wallet_android {
  padding-top: 90px;
}

.navbar-wrap {
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  width: 100%;
  background: #fff;
  border-top: 1px solid #f8f8f8;
  z-index: 2;
  padding: 0 10px;
  height: 50px;

  ul {
    width: 100%;
    height: 100%;
    padding-left: 0;
    display: flex;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
    overflow: hidden;
    list-style-type: none;

    li {
      flex: 1;
      height: 100%;
      vertical-align: middle;
      text-align: center;
      margin-right: 0;

      a {
        display: block;
        margin: 0;
        height: 100%;
        border-top: 2px solid transparent;
        color: #cecece;
        position: relative;
        font-size: 10px;
        padding-top: 5px;

        &:not(.active){
          &:hover{
            color: darken(#cecece, 15);
          }
        }

        span {
          display: block;
          margin-top: 3px;
        }
      }

      .icon {
        display: inline-block;
        font-size: 20px;
      }

      &.active {
        a{
          border-top: 2px solid $main_color;
          color: $main_color;
        }
      }

    }
  }
}

.p-wallet__price-block {
  position: relative;
  right: 0;
  left: 0;
  width: 100%;
  z-index: 2;
  text-align: center;
  color: #fff;
  padding: 30px 0 0;

  .price-wrapper {
    color: #d52026;
    font-weight: 900;
    height: 90px;
    position: relative;
    display: inline-block;
  }
}

.p-wallet__price-block .price .price-icon {
  font-size: 30px;
  position: absolute;
  top: 50%;
  margin-top: -15px;
  color: #ccc;
  left: -30px;
}

.p-wallet__price-block .price .price-sup {
  font-style: italic;
  font-weight: 700;
  position: absolute;
  left: 100%;
  font-size: 40px;
  top: 5%;
}

.p-wallet__price-block .ballance {
  font-family: "Montserrat", sans-serif;
  font-size: 10px;
  display: block;
  color: #aaa;
}

.transactions {
  position: relative;
  margin-right: 30px;
  margin-left: 30px;
  margin-top: 67px;
  z-index: 2;
  padding-bottom: 70px;
}

.transactions__head {
  text-align: center;
  color: #333;
  font-weight: 900;
  font-size: 16px;
}

.transactions__table {
  margin-top: 20px;
  overflow-x: hidden;
  //overflow-y: scroll;

  table {
    width: 100%;

    tr {
      border-top: 2px solid #ccc;

      td {
        padding: 5px 0;

        &:first-child {
          text-align: left;
        }

        &:last-child {
          text-align: right;
        }
      }
    }
  }
}

.transactions__table.sm-height {
  height: 200px;
}

.transactions__table .details-wrap .icon {
  vertical-align: middle;
  stroke: currentColor;
}

.transactions__table .details-info {
  display: inline-block;
  vertical-align: middle;
  font-family: "Montserrat", sans-serif;
  color: #777;
  font-size: 10px;
  font-weight: 300;
}

.transactions__table .details-price {
  font-size: 24px;
  font-weight: 900;
}

.transactions__table .details-time {
  display: block;
  color: #999;
  font-size: 24px;
}

.transactions__table .details-date {
  display: block;
  font-family: "Montserrat", sans-serif;
  color: #777;
  font-size: 10px;
  font-weight: 300;
}

.danger {
  color: #d52026;
}

.success {
  color: #48be18;
}

.p-share {
  width: 100%;
  padding-top: 35px;
}

.p-wrap {
  position: relative;
  z-index: 2;
  text-align: center;
  padding-bottom: 70px;
}

.send.tab-in .p-wrap {
  max-height: 485px;
  overflow-y: auto;
}

.p-wrap_android {
  padding-top: 80px;
  padding-bottom: 20px;
}

.page-heading span {
  color: #333;
  font-size: 16px;
  font-weight: 900;
  letter-spacing: 0.3px;
}

.page-heading span > span {
  font-style: italic;
}

.page-qr {
  margin-top: 50px;

  img {
    max-width: 250px;
    width: 100%;
  }
}

.page-action {
  margin-top: 48px;
}

.page-action__info {
  margin-top: 22px;
  width: 125px;
  letter-spacing: 0.7px;
  margin-left: auto;
  margin-right: auto;
  color: #999;
  font-size: 10px;
  line-height: 13px;
}

.page-form {
  margin: 60px auto 0;
  max-width: 300px;
}

input {
  border: 2px solid #eee;
  border-radius: 5px;
  padding: 14px 22px;
  font-family: "Montserrat", sans-serif;
  font-size: 14px;
  font-weight: 300;
  color: #333;
  max-width: 300px;
  width: 100%;
  outline: none;
  box-shadow: none;

  &[type="checkbox"] {
    width: auto;
    margin: 0;
  }
}

.form-group {
  text-align: left;
  margin-bottom: 23px;
}

.title {
  margin-left: 25px;
  margin-right: 25px;
  font-family: "Montserrat", sans-serif;
  font-size: 10px;
  font-weight: 700;
  color: #aaa;
  margin-bottom: 7px;
}

.name {
  float: left;
}

.available {
  float: right;
  font-weight: 300;

  > span {
    font-weight: 700;
  }
}

.input-wrap {
  position: relative;
}

.input-icon input {
  padding: 14px 40px 14px 22px !important;
}

.input-wrap .icon {
  position: absolute;
  right: 23px;
  top: 17px;
  font-size: 15px;
  color: #bbb;
}

.p-history {
  padding-top: 34px;

  .transactions {
    margin-top: 0;

    .transactions__table {
      padding-bottom: 0;
    }

    tr {
      border-top: 0;
      border-bottom: 2px solid #ccc;
    }
  }

  .p-wrap {
    padding-bottom: 20px;
  }
}

.qrcode {
  margin: 0 auto;
}

#main-section {
  position: relative;
  background: #fff;
  height: 100%;
}

.topbar-transparent {
  .tab-bar {
    background: transparent;
    border: 0;
  }
}

.tab-view {
  transform: translate3d(-100%, 0, 0);
  width: 100%;
  position: absolute;
  padding-top: 0;
  top: 45px;
  bottom: 37px;
  overflow: hidden;
  padding-bottom: 40px;

  &.tab-in {
    transform: translate3d(0, 0, 0) !important;
  }
}

.wrappable-menu-item {
  width: 70%;
  text-align: right;
  white-space: normal;
  word-break: break-all;

  .arrow-right {
    float: right;
  }
}

.wrapable-saidebar-item {
  white-space: normal;
  word-break: break-all;
}

.text-ellipsis {
  text-overflow: ellipsis;
  overflow: hidden;
}
/* ... */

